--- a/Client/.project
+++ b/Client/.project
@@ -3,6 +3,7 @@
 	<name>Client</name>
 	<comment></comment>
 	<projects>
+		<project>AgeOfEmpiresTaller</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
