--- a/Client/YAML/configuracionCliente2.yaml
+++ b/Client/YAML/configuracionCliente2.yaml
@@ -5,15 +5,17 @@ pantalla:
 
 tipos:
  - nombre: barraca
-   imagen: img/dibujo_estatico/construcciones/barraks/barraks.png
-   pixel_ref_x: 45
-   pixel_ref_y: 95
+   imagen: img/elfos/CASA.png
+   ancho_base: 2
+   alto_base: 2
+   pixel_ref_x: -50
+   pixel_ref_y: 150
 
  - nombre: soldado
    imagen: img/protagonista/WALK.png
-   fps: 5
+   fps: 4
    delay: 0
-   velocidad: 10
+   velocidad: 14
    vida: 50
    armadura: 10
    construccion: 10
@@ -22,11 +24,10 @@ tipos:
 
  - nombre: wheel
    imagen: img/dibujo_dinamico/wheel.png
-   pixel_ref_x: 57
-   pixel_ref_y: 25
+   pixel_ref_x: -47
+   pixel_ref_y: 50
    fps: 20
    delay: 50
-
 
  - nombre: herreria
    imagen: img/dibujo_dinamico/mirador.png
@@ -47,23 +48,23 @@ tipos:
 
  - nombre: oro
    imagen: img/oro.png
-   pixel_ref_x: 65
-   pixel_ref_y: 10 
+   pixel_ref_x: 10
+   pixel_ref_y: 0 
 
  - nombre: piedra
    imagen: img/piedra.png
-   pixel_ref_x: 60
-   pixel_ref_y: 7
+   pixel_ref_x: 10
+   pixel_ref_y: 3
 
  - nombre: madera
-   imagen: img/madera.png
-   pixel_ref_x: 61
-   pixel_ref_y: 0
+   imagen: img/dibujo_estatico/arbol/pinetree.png
+   pixel_ref_x: 16
+   pixel_ref_y: 120
 
  - nombre: firestation
    imagen: img/dibujo_estatico/construcciones/firestation.png
-   pixel_ref_x: 62
-   pixel_ref_y: 35
+   pixel_ref_x: 0
+   pixel_ref_y: 44
 
  - nombre: arbol
    imagen: img/dibujo_estatico/arbol/firtree.png
