--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -12,7 +12,9 @@ tipos:
    pixel_ref_y: 150
 
  - nombre: soldado
-   imagen: img/protagonista/WALK.png
+   imagen: img/elfos/units/legolas a caballo/WALK.png
+   imagen_quieto: img/elfos/units/legolas a caballo/STAND.png
+   imagen_atacar: img/elfos/units/legolas a caballo/ATACK.png
    fps: 4
    delay: 0
    velocidad: 14
