--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -138,7 +138,7 @@ tipos:
    pixel_ref_x: 20
    pixel_ref_y: 45
 
- - nombre: soldado
+ - nombre: gandalf
    imagen: img/2hobbit/gandalf/WALK.png
    imagen_quieto: img/2hobbit/gandalf/STAND.png
    imagen_atacar: img/2hobbit/gandalf/ATACK.png
@@ -154,6 +154,8 @@ tipos:
 
  - nombre: wheel
    imagen: img/2hobbit/wheel.png
+   ancho_base: 1
+   alto_base: 2
    pixel_ref_x: -47
    pixel_ref_y: 50
    fps: 20
@@ -202,7 +204,7 @@ tipos:
    pixel_ref_y: 45
 
 protagonista:
-   - tipo: soldado
+   - tipo: gandalf
      x: 10
      y: 10
 
