--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -6,6 +6,7 @@ pantalla:
 tipos:
  - nombre: barraca
    imagen: img/1elfos/ARQUERIA.png
+   icono:  img/1elfos/icon-arqueria.png
    ancho_base: 4
    alto_base: 4
    pixel_ref_x: -90
@@ -15,6 +16,7 @@ tipos:
 
  - nombre: arqueriaElfos
    imagen: img/1elfos/ARQUERIA.png
+   icono:  img/1elfos/icon-arqueria.png
    ancho_base: 4
    alto_base: 4
    pixel_ref_x: -90
@@ -23,6 +25,7 @@ tipos:
 
  - nombre: caballeriaElfos
    imagen: img/1elfos/CABALLERIA.png
+   icono:  img/1elfos/icon-caballeria.png
    ancho_base: 3
    alto_base: 3
    pixel_ref_x: -70
@@ -39,6 +42,7 @@ tipos:
 
  - nombre: molElfos
    imagen: img/1elfos/MOLINO.png
+   imagen: img/1elfos/icon-molino.png
    ancho_base: 2
    alto_base: 2
    pixel_ref_x: -50
