CrearPersonaje no terminado

--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -151,6 +151,7 @@ tipos:
    recoleccion: 10   
    fuerza: 10
    raza: Elfo
+   edificio_constructor: barraca
 
  - nombre: wheel
    imagen: img/2hobbit/wheel.png
