--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -12,7 +12,7 @@ tipos:
    pixel_ref_y: 360
    vida: 50
    raza: Elfo  
-   velocidad_de_construccion: 30
+   velocidad_de_construccion: 20
    oro: 50
    piedra: 50
    madera: 50   
@@ -26,7 +26,7 @@ tipos:
    pixel_ref_y: 320
    vida: 50
    raza: Elfo
-   velocidad_de_construccion: 20
+   velocidad_de_construccion: 15
    oro: 50
    piedra: 50
    madera: 50 
@@ -43,8 +43,8 @@ tipos:
  - nombre: molElfos
    imagen: img/1elfos/MOLINO.png
    icono: img/1elfos/icon-molino.bmp
-   ancho_base: 2
-   alto_base: 2
+   ancho_base: 3
+   alto_base: 3
    pixel_ref_x: -50
    pixel_ref_y: 80
    vida: 50
@@ -76,6 +76,32 @@ tipos:
    oro: 50
    piedra: 50
    madera: 50 
+
+ - nombre: casaGandalfHobbit
+   imagen: img/2hobbit/CASA-GANDALF.png
+   icono: img/2hobbit/icon-casa-gandalf.bmp
+   ancho_base: 3
+   alto_base: 3
+   pixel_ref_x: -80
+   pixel_ref_y: 85
+   vida: 50
+   raza: Hobbit
+   velocidad_de_construccion: 20
+   oro: 50
+   piedra: 50
+   madera: 50 
+
+ - nombre: wheel
+   imagen: img/2hobbit/wheel.png
+   icono: img/2hobbit/icon-molino.bmp
+   ancho_base: 1
+   alto_base: 2
+   pixel_ref_x: -47
+   pixel_ref_y: 50
+   fps: 20
+   delay: 1
+   vida: 50
+   raza: Hobbit
 
  - nombre: banderaHobbit
    imagen: img/2hobbit/bandera/flag.png
@@ -291,7 +317,7 @@ tipos:
    fuerza: 10
    armadura: 10
    raza: Hobbit
-   edificio_constructor: cuartelHobbit
+   edificio_constructor: casaGandalfHobbit
    oro: 50
    comida: 50
 
@@ -423,16 +449,6 @@ tipos:
    edificio_constructor: cuartelBestiaMordor
    oro: 50
    comida: 50
-
- - nombre: wheel
-   imagen: img/2hobbit/wheel.png
-   ancho_base: 1
-   alto_base: 2
-   pixel_ref_x: -47
-   pixel_ref_y: 50
-   fps: 20
-   delay: 1
-   vida: 50
 
  - nombre: herreria
    imagen: img/dibujo_dinamico/mirador.png
