--- a/Client/YAML/configuracionCliente.yaml
+++ b/Client/YAML/configuracionCliente.yaml
@@ -486,10 +486,15 @@ tipos:
    pixel_ref_x: 10
    pixel_ref_y: 3
 
+ - nombre: comida
+   imagen: img/extras/comida.png
+   pixel_ref_x: 10
+   pixel_ref_y: 3
+
  - nombre: madera
    imagen: img/extras/terrain/arboles/arbol1.png
-   pixel_ref_x: 16
-   pixel_ref_y: 120
+   pixel_ref_x: -40
+   pixel_ref_y: 150
 
  - nombre: arbol
    imagen: img/dibujo_estatico/arbol/firtree.png
