--- a/Client/.cproject
+++ b/Client/.cproject
@@ -50,6 +50,7 @@
 									<listOptionValue builtIn="false" value="SDL2"/>
 									<listOptionValue builtIn="false" value="SDL2main"/>
 									<listOptionValue builtIn="false" value="SDL2_ttf"/>
+									<listOptionValue builtIn="false" srcPrefixMapping="" srcRootPath="" value="SDL2_mixer"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.1335941943" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/AgeOfEmpiresTaller/Debug}&quot;"/>
